tests/string_concat_nonliteral_bad.stderr
tests/string_concat_nonliteral_bad.sl:4:10: error: SL2053: string '+' currently only supports non-parenthesized literal chains
