tests/string_concat_nonliteral_bad.sl
// Verifies string concatenation nonliteral is rejected.
fn main() {
	var b = "mutable"
	var c = b + "string"
	_ = c
}
